--- a/Javascript/ejercicio4/ej4.css
+++ b/Javascript/ejercicio4/ej4.css
@@ -3,9 +3,9 @@
 }
 
 .additional.hidden {
-  /* vuestro CSS aquí */
+  display: none;
 }
 
 .additional.visible {
-  /* vuestro CSS aquí */
+display:block;
 }
